config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ynaa-fagdag-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "app.motoren.site"
      http:
        paths:
          - pathType: Prefix
            path: "/ynaa(/|$)(.*)"
            backend:
              service:
                name: ynaa-fagdag
                port:
                  number: 80
